# data-driven-game-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  conandata.yml  conanfile.py  dependencies.cmake  vcpkg.json
example/: CMakeLists.txt
example/models/SponzaKTX/: Sponza.gltf  Sponza02.gltf
example/models/SponzaKTX2/: SponzaUastc.gltf
example/models/armor/: armor.gltf
example/shaders/: CMakeLists.txt  color.frag  material.glsl  model.vert  model_test.frag  model_test.vert  model_test2.frag  model_test2.vert  pbr.frag  utility.glsl
example/src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Controller.cpp  Controller.hpp  DemoRenderer.cpp  DemoRenderer.hpp  Renderer.cpp  Renderer.hpp  demo.cpp  demo.hpp  demo_init.cpp  demo_init.hpp  init.cpp  init.hpp  main.cpp
examples/: CMakeLists.txt  README.md
examples/constexpr/: main.cpp
examples/dependency_injection/: CMakeLists.txt  main.cpp
examples/hello_app/: CMakeLists.txt  main.cpp
examples/hello_engine/: CMakeLists.txt  main.cpp
examples/outdated/src/: CMakeLists.txt
examples/parallelism/: CMakeLists.txt  main.cpp
examples/render_a_triangle/: CMakeLists.txt  main.cpp
examples/render_a_triangle/shaders/: CMakeLists.txt  triangle.slang
examples/simple/: Window.ixx  main.cpp
examples/snake/src/: CMakeLists.txt  main.cpp  snake.cppm
examples/src/: CMakeLists.txt  Camera.hpp  Controller.cpp  Controller.hpp  demo.cpp  demo.hpp  demo_init.cpp  demo_init.hpp  main.cpp
examples/src/base/: CMakeLists.txt  Controller.cpp  Controller.hpp  Controller.ixx  DemoBase.cpp  DemoBase.cxx  DemoBase.hpp  DemoBase.ixx  Renderer.cpp  Renderer.hpp  Renderer.inl  Renderer.ixx  init.cpp  init.hpp  init.ixx
examples/src/demos/: CMakeLists.txt
lib/: CMakeLists.txt
lib/cmake/: Config.cmake.in  dependencies.cmake  set_log_level.cmake
lib/src/: CMakeLists.txt  ddge.cppm
lib/src/addons/: Assets.ixx  CMakeLists.txt  ECS.ixx  EventManager.ixx  Events.ixx  Messages.ixx  ResourceManager.ixx  Resources.ixx  States.ixx  addons.cppm  assets.ixx  ecs.ixx  resources.ixx
lib/src/app/: App.ixx  Builder.ixx  CMakeLists.txt  add_on_t.ixx  addon_c.ixx  app.cppm  app_c.ixx  builder_c.ixx  create.ixx  decays_to_addon_c.ixx  decays_to_app_c.ixx  decays_to_builder_c.ixx  decays_to_plugin_c.ixx  has_addons_c.ixx  has_plugins_c.ixx  plug_in_t.ixx  plugin_c.ixx
lib/src/config/: config.cppm  vulkan.cxx  vulkan.ixx
lib/src/core/: CMakeLists.txt  core.cppm
lib/src/ddge/: CMakeLists.txt  ddge.cppm
lib/src/deprecated/: CMakeLists.txt  deprecated.cppm
lib/src/extensions/: AddonManager.ixx  Addons.ixx  Assets.ixx  CMakeLists.txt  ECS.ixx  EventManager.ixx  Events.ixx  Functional.ixx  ResourceManager.ixx  Resources.ixx  Runnable.ixx  ScheduleRunner.ixx  TaskRunner.ixx  extensions.cppm
lib/src/modules/: CMakeLists.txt  modules.cppm
lib/src/plugins/: CMakeLists.txt  addons.ixx  assets.ixx  ecs.ixx  events.ixx  functional.ixx  messages.ixx  plugins.cppm  resources.ixx  runnable.ixx  scheduler.ixx  states.ixx
lib/src/prelude/: CMakeLists.txt  app.ixx  plugins.ixx  prelude.cppm
lib/src/util/: Bool.ixx  CMakeLists.txt  FunctionInterface.ixx  Overloaded.ixx  ScopeGuard.ixx  Size.ixx  TypeList.ixx  ValueSequence.ixx  Void.ixx  any_cast.ixx  contracts.ixx  hashing.ixx  lifetime_bound.hpp  lifetimebound.hpp  no_op.ixx  no_unique_address.hpp  not_fn.ixx  util.cppm
lib/src/utility/: Bool.ixx  CMakeLists.txt  FunctionInterface.ixx  Overloaded.ixx  ScopeFail.ixx  ScopeGuard.ixx  Size.ixx  StringLiteral.ixx  Strong.ixx  TypeList.ixx  ValueSequence.ixx  Void.ixx  all_same.ixx  any_cast.ixx  contract.cxx  contract_macros.hpp  contracts.cpp  contracts.hpp  contracts.ixx  contracts_macros.hpp  hashing.ixx  no_op.ixx  not_fn.ixx  utility.cppm  wrap_ref.ixx
libs/vulkan-memory-allocator/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cppm
src/core/app/: App-details.ixx  App-fwd.ixx  App-mixin_c.ixx  App.cxx  App.inl  App.ixx  Builder-customization_c.ixx  Builder-details.ixx  Builder-extension_c.ixx  Builder-fwd.ixx  Builder.cxx  Builder.inl  Builder.ixx  CMakeLists.txt  app.cppm
src/core/cache/: CMakeLists.txt  Cache.hpp  Cache.inl  Cache.ixx  Handle.hpp  Handle.inl  Handle.ixx  cache.cppm
src/core/common/: Cache.hpp  Cache.inl  Handle.hpp  Handle.inl  ID.hpp
src/core/config/: CMakeLists.txt  config.cppm  logging.ixx  vulkan.cpp  vulkan.hpp  vulkan.ixx
src/core/ecs/: Archetype.ixx  CMakeLists.txt  Component.ixx  Entity.ixx  Registry.ixx  RegistryTag.ixx  ecs.cppm  fwd.ixx
src/core/gfx/: CMakeLists.txt  Camera.cpp  Camera.cxx  Camera.hpp  Camera.ixx
src/core/gltf/: CMakeLists.txt  Image.hpp  ImageLoader.cpp  ImageLoader.cxx  ImageLoader.hpp  ImageLoader.ixx  Loader.cpp  Loader.cxx  Loader.hpp  Material.cpp  Material.hpp  Mesh.hpp  Mesh.ixx  Model.cpp  Model.cxx  Model.hpp  Model.ixx  Node.cpp  Node.hpp  Node.inl  RenderModel.cpp  RenderModel.cxx  RenderModel.hpp  RenderModel.ixx  Texture.cpp  Texture.cxx  Texture.hpp  Texture.ixx  gltf.cppm
src/core/graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/core/image/: CMakeLists.txt  Image.cpp  Image.hpp  Image.ixx  KTX2Image.cpp  KTX2Image.hpp  KtxImage.cpp  KtxImage.hpp  StbImage.cpp  StbImage.hpp  image.cppm
src/core/log/: CMakeLists.txt  log.cpp  log.hpp
src/core/meta/: functional.hpp  tuple-like.hpp  tuple.hpp
src/core/renderer/: CMakeLists.txt  RenderScene.cpp  RenderScene.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp  SceneBuilder.inl  renderer.cppm
src/core/resource/: CMakeLists.txt  ResourceManager.ixx
src/core/store/: CMakeLists.txt  Store.cxx  Store.hpp  Store.inl  Store.ixx  StoreView.cpp  StoreView.cxx  StoreView.ixx  storable_c.ixx  store.cppm
src/core/utility/: CMakeLists.txt  Result.hpp  Size.hpp  Size.ixx  functional.hpp  (+5 more)
src/utility/: CMakeLists.txt  OptionalRef.ixx  ScopeGuard.ixx  Size.ixx  SparseSet.ixx  Strong.ixx  TypeList.ixx  ValueSequence.ixx  hashing.ixx  lifetime_bound.hpp  tuple.ixx  utility.cppm
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
(+3594 files in other folders)
